--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -54,6 +54,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,11 +65,69 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Model\event.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\following.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\group.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\message.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\person.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\PigeonsModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PigeonsModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\PigeonsModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\PigeonsModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PigeonsModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\task.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\type.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <EntityDeploy Include="Model\PigeonsModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>PigeonsModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\PigeonsModel.edmx.diagram">
+      <DependentUpon>PigeonsModel.edmx</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model\PigeonsModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PigeonsModel.edmx</DependentUpon>
+      <LastGenOutput>PigeonsModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\PigeonsModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PigeonsModel.edmx</DependentUpon>
+      <LastGenOutput>PigeonsModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
