--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -65,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Controller\Controller.cs" />
+    <Compile Include="DAO\GenericDAO.cs" />
     <Compile Include="DAO\PersonDAO.cs" />
     <Compile Include="Model\event.cs">
       <DependentUpon>PigeonsModel.tt</DependentUpon>
