--- a/Pigeon_website/packages.config
+++ b/Pigeon_website/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="Node.js" version="5.3.0" targetFramework="net45" />
 </packages>
