--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="DAO\GenericDAO.cs" />
     <Compile Include="DAO\Implementation\DAO.cs" />
-    <Compile Include="DAO\Implementation\EventDAO.cs" />
+    <Compile Include="DAO\Implementation\ProjectDAO.cs" />
     <Compile Include="DAO\Implementation\FollowingDAO.cs" />
     <Compile Include="DAO\Implementation\GroupDAO.cs" />
     <Compile Include="DAO\Implementation\MessageDAO.cs" />
@@ -76,7 +76,7 @@
     <Compile Include="DAO\Implementation\TaskDAO.cs" />
     <Compile Include="DAO\Implementation\TypeDAO.cs" />
     <Compile Include="DAO\Interface\IDAO.cs" />
-    <Compile Include="DAO\Interface\IEventDAO.cs" />
+    <Compile Include="DAO\Interface\IProjectDAO.cs" />
     <Compile Include="DAO\Interface\IFollowingDAO.cs" />
     <Compile Include="DAO\Interface\IGroupDAO.cs" />
     <Compile Include="DAO\Interface\IMessageDAO.cs" />
@@ -84,9 +84,8 @@
     <Compile Include="DAO\Interface\ITaskDAO.cs" />
     <Compile Include="DAO\Interface\ITypeDAO.cs" />
     <Compile Include="DAO\PersonDAO_toremove.cs" />
-    <Compile Include="Model\event.cs">
-      <DependentUpon>PigeonsModel.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Exceptions\ControllerException.cs" />
+    <Compile Include="Exceptions\ServiceException.cs" />
     <Compile Include="Model\following.cs">
       <DependentUpon>PigeonsModel.tt</DependentUpon>
     </Compile>
@@ -114,6 +113,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PigeonsModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model\project.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\task.cs">
       <DependentUpon>PigeonsModel.tt</DependentUpon>
@@ -121,7 +123,7 @@
     <Compile Include="Model\type.cs">
       <DependentUpon>PigeonsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Service\Implementation\EventService.cs" />
+    <Compile Include="Service\Implementation\ProjectService.cs" />
     <Compile Include="Service\Implementation\FollowingService.cs" />
     <Compile Include="Service\Implementation\GroupService.cs" />
     <Compile Include="Service\Implementation\MessageService.cs" />
@@ -129,7 +131,7 @@
     <Compile Include="Service\Implementation\Service.cs" />
     <Compile Include="Service\Implementation\TaskService.cs" />
     <Compile Include="Service\Implementation\TypeService.cs" />
-    <Compile Include="Service\Interface\IEventService.cs" />
+    <Compile Include="Service\Interface\IProjectService.cs" />
     <Compile Include="Service\Interface\IGroupService.cs" />
     <Compile Include="Service\Interface\IMessageService.cs" />
     <Compile Include="Service\Interface\IFollowingService.cs" />
