--- a/Pigeon_website/Web.config
+++ b/Pigeon_website/Web.config
@@ -58,6 +58,8 @@
   <connectionStrings>
     <remove name="LocalMySqlServer" />
     <add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient" />
+    <add name="pigeonsEntities" connectionString="metadata=res://*/pigeons.csdl|res://*/pigeons.ssdl|res://*/pigeons.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=Pigeons;password=admin1234;persistsecurityinfo=True;database=pigeons&quot;" providerName="System.Data.EntityClient" />
+    <add name="pigeonsEntities1" connectionString="metadata=res://*/Model.PigeonsModel.csdl|res://*/Model.PigeonsModel.ssdl|res://*/Model.PigeonsModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;persistsecurityinfo=True;server=localhost;user id=Pigeons;password=admin1234;database=pigeons&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -67,7 +69,8 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      </provider></providers>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
