--- a/Pigeon_website/packages.config
+++ b/Pigeon_website/packages.config
@@ -4,7 +4,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
-  <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net45" />
+  <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net45" />
   <package id="MySql.Web" version="6.9.8" targetFramework="net45" />
   <package id="Node.js" version="5.3.0" targetFramework="net45" />
 </packages>
