--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -86,6 +86,7 @@
     <Compile Include="DAO\Interface\ITypeDAO.cs" />
     <Compile Include="DAO\PersonDAO_toremove.cs" />
     <Compile Include="Exceptions\ControllerException.cs" />
+    <Compile Include="Exceptions\FacadeException.cs" />
     <Compile Include="Exceptions\ServiceException.cs" />
     <Compile Include="Facade\Implementation\GroupFacade.cs" />
     <Compile Include="Facade\Implementation\HomeFacade.cs" />
@@ -155,6 +156,7 @@
     <None Include="Model\PigeonsModel.edmx.diagram">
       <DependentUpon>PigeonsModel.edmx</DependentUpon>
     </None>
+    <None Include="PigeonsDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Model\PigeonsModel.Context.tt">
