Ajout Facade. Added group fonctions (remove follower / close group).

--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -86,10 +86,13 @@
     <Compile Include="DAO\Interface\ITypeDAO.cs" />
     <Compile Include="DAO\PersonDAO_toremove.cs" />
     <Compile Include="Exceptions\ControllerException.cs" />
+    <Compile Include="Exceptions\DAOException.cs" />
     <Compile Include="Exceptions\FacadeException.cs" />
     <Compile Include="Exceptions\ServiceException.cs" />
+    <Compile Include="Facade\Implementation\Facade.cs" />
     <Compile Include="Facade\Implementation\GroupFacade.cs" />
     <Compile Include="Facade\Implementation\HomeFacade.cs" />
+    <Compile Include="Facade\Interface\IFacade.cs" />
     <Compile Include="Facade\Interface\IGroupFacade.cs" />
     <Compile Include="Facade\Interface\IHomeFacade.cs" />
     <Compile Include="Model\following.cs">
