Correction configuration Entity

--- a/PigeonsLibrairy/UnitTesting/App.config
+++ b/PigeonsLibrairy/UnitTesting/App.config
@@ -12,8 +12,9 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
-  </providers>
+    
+  <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      </provider></providers>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -21,10 +22,14 @@
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.9.8.0" newVersion="6.9.8.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-      <add name="pigeonsEntities1" connectionString="metadata=res://*/pigeons.csdl|res://*/pigeons.ssdl|res://*/pigeons.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=pigeons;password=admin1234;persistsecurityinfo=True;database=pigeons&quot;" providerName="System.Data.EntityClient" />
+    <add name="pigeonsEntities1" connectionString="metadata=res://*/Model.PigeonsModel.csdl|res://*/Model.PigeonsModel.ssdl|res://*/Model.PigeonsModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;persistsecurityinfo=True;server=localhost;user id=Pigeons;password=admin1234;database=pigeons&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 <system.data>
     <DbProviderFactories>
