--- a/Pigeon_website/Web.config
+++ b/Pigeon_website/Web.config
@@ -5,22 +5,12 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <system.web>
-    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5">
-      <assemblies>
-            <add assembly="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
-            <add assembly="MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
-      </assemblies>
-    </compilation>
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    
-    
-    
-    
-    
   <membership defaultProvider="MySQLMembershipProvider">
       <providers>
         <remove name="MySQLMembershipProvider" />
@@ -49,10 +39,7 @@
         </providers>
       </personalization>
     </webParts></system.web>
-  
   <connectionStrings>
-    
-    
     <add name="pigeonsEntities" connectionString="metadata=res://*/pigeons.csdl|res://*/pigeons.ssdl|res://*/pigeons.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=Pigeons;password=admin1234;persistsecurityinfo=True;database=pigeons&quot;" providerName="System.Data.EntityClient" />
     <add name="pigeonsEntities1" connectionString="metadata=res://*/Model.PigeonsModel.csdl|res://*/Model.PigeonsModel.ssdl|res://*/Model.PigeonsModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;persistsecurityinfo=True;server=localhost;user id=Pigeons;password=admin1234;database=pigeons&quot;" providerName="System.Data.EntityClient" />
   <remove name="LocalMySqlServer" /><add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient" /></connectionStrings>
@@ -64,8 +51,8 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-  </providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      </provider></providers>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -75,6 +62,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
 <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
