--- a/PigeonsLibrairy/FunctionsTester/FunctionsTester.csproj
+++ b/PigeonsLibrairy/FunctionsTester/FunctionsTester.csproj
@@ -124,6 +124,9 @@
       <Name>PigeonsLibrairy</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Log\LoggerFile.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
