--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Controller\FileController.cs" />
     <Compile Include="Controller\MainController.cs" />
     <Compile Include="DAO\GenericDAO.cs" />
     <Compile Include="DAO\Implementation\DAO.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Facade\Interface\IFacade.cs" />
     <Compile Include="Facade\Interface\IGroupFacade.cs" />
     <Compile Include="Facade\Interface\IHomeFacade.cs" />
+    <Compile Include="Log\ExceptionLog.cs" />
     <Compile Include="Model\following.cs">
       <DependentUpon>PigeonsModel.tt</DependentUpon>
     </Compile>
@@ -165,6 +167,7 @@
     <None Include="PigeonsDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Log\LoggerFile.txt" />
     <Content Include="Model\PigeonsModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>PigeonsModel.edmx</DependentUpon>
