ajout des tests pr person,group,task et type

--- a/PigeonsLibrairy/UnitTesting/App.config
+++ b/PigeonsLibrairy/UnitTesting/App.config
@@ -29,7 +29,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="pigeonsEntities1" connectionString="metadata=res://*/Model.PigeonsModel.csdl|res://*/Model.PigeonsModel.ssdl|res://*/Model.PigeonsModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;persistsecurityinfo=True;server=localhost;user id=Pigeons;password=admin1234;database=pigeons&quot;" providerName="System.Data.EntityClient" />
+    <add name="pigeonsEntities1" connectionString="metadata=res://*/Model.PigeonsModel.csdl|res://*/Model.PigeonsModel.ssdl|res://*/Model.PigeonsModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;persistsecurityinfo=True;server=localhost;user id=pigeons;password=admin1234;database=pigeons&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 <system.data>
     <DbProviderFactories>
