--- a/PigeonsLibrairy/UnitTesting/packages.config
+++ b/PigeonsLibrairy/UnitTesting/packages.config
@@ -5,4 +5,5 @@
   <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net45" />
   <package id="MySql.Web" version="6.9.8" targetFramework="net45" />
+  <package id="NUnit" version="3.2.0" targetFramework="net45" />
 </packages>
