--- a/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
+++ b/PigeonsLibrairy/PigeonsLibrairy/PigeonsLibrairy.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Controller\FileController.cs" />
     <Compile Include="Controller\MainController.cs" />
     <Compile Include="DAO\Implementation\AssignationDAO.cs" />
+    <Compile Include="DAO\Implementation\ChatHistoryDAO.cs" />
     <Compile Include="DAO\Implementation\DAO.cs" />
     <Compile Include="DAO\Implementation\EventDAO.cs" />
     <Compile Include="DAO\Implementation\FollowingDAO.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="DAO\Implementation\PersonDAO.cs" />
     <Compile Include="DAO\Implementation\TaskDAO.cs" />
     <Compile Include="DAO\Interface\IAssignationDAO.cs" />
+    <Compile Include="DAO\Interface\IChatHistoryDAO.cs" />
     <Compile Include="DAO\Interface\IDAO.cs" />
     <Compile Include="DAO\Interface\IEventDAO.cs" />
     <Compile Include="DAO\Interface\IFollowingDAO.cs" />
@@ -99,6 +101,9 @@
     <Compile Include="Facade\Interface\IHomeFacade.cs" />
     <Compile Include="Log\ExceptionLog.cs" />
     <Compile Include="Model\assignation.cs">
+      <DependentUpon>PigeonsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\chathistory.cs">
       <DependentUpon>PigeonsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\event.cs">
@@ -136,6 +141,7 @@
       <DependentUpon>PigeonsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\Implementation\AssignationService.cs" />
+    <Compile Include="Service\Implementation\ChatHistoryService.cs" />
     <Compile Include="Service\Implementation\EventService.cs" />
     <Compile Include="Service\Implementation\FollowingService.cs" />
     <Compile Include="Service\Implementation\GroupService.cs" />
@@ -144,6 +150,7 @@
     <Compile Include="Service\Implementation\Service.cs" />
     <Compile Include="Service\Implementation\TaskService.cs" />
     <Compile Include="Service\Interface\IAssignationService.cs" />
+    <Compile Include="Service\Interface\IChatHistoryService.cs" />
     <Compile Include="Service\Interface\IEventService.cs" />
     <Compile Include="Service\Interface\IGroupService.cs" />
     <Compile Include="Service\Interface\IMessageService.cs" />
