--- a/Pigeon_website/Web.config
+++ b/Pigeon_website/Web.config
@@ -80,4 +80,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
