--- a/Pigeon_website/packages.config
+++ b/Pigeon_website/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="2.2.2" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
   <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net45" />
   <package id="MySql.Web" version="6.9.8" targetFramework="net45" />
