Required field on new task description

--- a/Pigeon_website/Web.config
+++ b/Pigeon_website/Web.config
@@ -81,6 +81,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false" />
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 </configuration>
