premiere insertion de upload/download

--- a/Pigeon_website/Web.config
+++ b/Pigeon_website/Web.config
@@ -49,6 +49,9 @@
       </personalization>
     </webParts>
   </system.web>
+  <system.webServer>
+    <directoryBrowse enabled="true" />
+  </system.webServer>
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
