tests DAO presque fini

--- a/PigeonsLibrairy/UnitTesting/UnitTesting.csproj
+++ b/PigeonsLibrairy/UnitTesting/UnitTesting.csproj
@@ -79,11 +79,11 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDAO\EventDAOTesting.cs" />
+    <Compile Include="TestDAO\eventDAO_Test.cs" />
     <Compile Include="TestDAO\followingDAO_Test.cs" />
-    <Compile Include="TestDAO\MessageDAOTesting.cs" />
+    <Compile Include="TestDAO\messageDAO_Test.cs" />
     <Compile Include="TestDAO\personDAO_Test.cs" />
-    <Compile Include="TestDAO\TaskDAOTesting.cs" />
+    <Compile Include="TestDAO\taskDAO_Test.cs" />
     <Compile Include="TestDAO\groupDAO_Test.cs" />
     <Compile Include="TestService\personService_Test.cs" />
   </ItemGroup>
